--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+body,
+h1,
+h2,
+h3,
+h4,
+h5 {
+	margin: 0px;
+	padding: 0px;
+}
+
+body {
+	font-family: 'Public Sans', sans-serif;
+}
