--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
-  <a [routerLink]="['1-smart-vs-dumb']">1) Smart VS Dumb</a>
+  <a [routerLink]="['1-smart-vs-dumb']">1a) Smart VS Dumb</a>
+  <a [routerLink]="['1-smart-vs-dumb/after']">1b) Smart VS Dumb</a>
 </nav>
 
 <router-outlet></router-outlet>
