--- a/src/app/1-smart-vs-dumb/smart-vs-dumb-after/smart-vs-dumb-after.component.scss
+++ b/src/app/1-smart-vs-dumb/smart-vs-dumb-after/smart-vs-dumb-after.component.scss
@@ -1,75 +1,19 @@
+$max-width: 1024px;
+
 :host {
     display: block;
     padding-bottom: 70px;
 }
 
-header {
-    background-color: #e3e3e3;
-    height: 20vh;
-    text-align: center;
-    background-size: cover;
-    background-position: center bottom;
-    color: white;
-    padding-top: 15vh;
-
-    h1 {
-        margin-bottom: 16px;
-    }
-
-    h2 {
-        font-weight: 300;
-    }
+// structural concerns (ie dimensions and margins) are handled by parent smart component
+//  to give maximum flexibility to dumb components
+app-profile-text-block {
+    display: block;
+    max-width: $max-width;
+    margin: 56px auto;
 }
 
-.text-block {
-    width: 100vw;
-    padding: 24px;
-
-    // repeated use of max-width: 1024px - not DRY or reusable
-    max-width: 1024px;
-    margin: 32px auto;
-
-    h2 {
-        margin-bottom: 24px;
-    }
-}
-
-// complex styling - not reusable and breaks single responsibility
-.video-block {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    max-width: 1024px;
-    margin: 32px auto;
-
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-}
-
-// complex styling - breaks single resposibility, not reusable
-.team {
-    max-width: 1024px;
-    margin: auto;
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 64px;
-
-    .member {
-        img {
-            max-width: 100%;
-            border-radius: 50%;
-        }
-
-        .name {
-            text-align: center;
-            font-size: 22px;
-            margin-top: 8px;
-        }
-    }
+app-profile-image-grid {
+    max-width: $max-width;
+    margin: 60px auto;
 }
