Add black box sample

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
   <a [routerLink]="['1-smart-vs-dumb']">1a) Smart VS Dumb</a>
   <a [routerLink]="['1-smart-vs-dumb/after']">1b) Smart VS Dumb</a>
+  <a [routerLink]="['black-box']">2) Black Box</a>
 </nav>
 
 <router-outlet></router-outlet>
