--- a/src/app/1-smart-vs-dumb/smart-vs-dumb-after/smart-vs-dumb-after.component.scss
+++ b/src/app/1-smart-vs-dumb/smart-vs-dumb-after/smart-vs-dumb-after.component.scss
@@ -17,3 +17,8 @@ app-profile-image-grid {
     max-width: $max-width;
     margin: 60px auto;
 }
+
+app-profile-video {
+    max-width: $max-width;
+    margin: auto;
+}
