--- a/src/app/1-smart-vs-dumb/smart-vs-dumb-before/smart-vs-dumb-before.component.scss
+++ b/src/app/1-smart-vs-dumb/smart-vs-dumb-before/smart-vs-dumb-before.component.scss
@@ -36,19 +36,24 @@ header {
 
 // complex styling - not reusable and breaks single responsibility
 .video-block {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
     max-width: 1024px;
-    margin: 32px auto;
+    margin: auto;
 
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
+    .video-wrapper {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        max-width: 1024px;
+        margin: 32px auto;
+
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
 // complex styling - breaks single resposibility, not reusable
