--- a/src/app/1-smart-vs-dumb/ui/profile/profile-text-block/profile-text-block.component.html
+++ b/src/app/1-smart-vs-dumb/ui/profile/profile-text-block/profile-text-block.component.html
@@ -1,6 +1,6 @@
 <div class="text-block">
     <h2>{{ heading }}</h2>
-    <p>
-        <ng-content></ng-content>
-    </p>
+
+    <!-- reusable - project any content inside -->
+    <ng-content></ng-content>
 </div>
