--- a/src/app/1-smart-vs-dumb/ui/profile/profile-video/profile-video.component.html
+++ b/src/app/1-smart-vs-dumb/ui/profile/profile-video/profile-video.component.html
@@ -1,5 +1,5 @@
 <div class="video-block">
-    <iframe width="1280" height="720" [src]="src" frameborder="0"
+    <iframe width="1280" height="720" [src]="srcSafe" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 </div>
