--- a/src/app/2-black-box/black-box/black-box.component.scss
+++ b/src/app/2-black-box/black-box/black-box.component.scss
@@ -3,5 +3,6 @@
     padding: 24px;
 
     // public styling api exposed via css variables
-    // --accordion-item-background-color: red;
+    // --accordion-item-background-color: #84A9C0;
+    // --accordion-item-hover-background-color: #B3CBB9;
 }
